// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Project ItemsTable behaviour should render correctly in english 1`] = `
<DocumentFragment>
  <table
    class="af-table"
  >
    <thead
      class="af-table-thead"
    >
      <tr
        class="af-table__tr"
      >
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Name
              </span>
              <i
                class="glyphicon glyphicon-sorting"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Team
              </span>
              <i
                class="glyphicon glyphicon-sorting"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Creation date
              </span>
              <i
                class="glyphicon glyphicon-sorting-desc"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Annotation type
              </span>
              <i
                class="glyphicon glyphicon-sorting"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Status
              </span>
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content af-btn__text"
          >
            Action
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      class="af-table__body"
    >
      <tr
        class="af-table__tr"
      >
        <td
          class="af-table__cell"
        >
          Green card
        </td>
        <td
          class="af-table__cell"
        >
          groupName
        </td>
        <td
          class="af-table__cell"
        >
          02/01/0001
        </td>
        <td
          class="af-table__cell"
        >
          Image
        </td>
        <td
          class="af-table__cell"
        >
          <span>
            Loading...
          </span>
        </td>
        <td
          class="af-table__cell"
        >
          <a
            class="btn af-btn--circle"
            href="#"
            id="id"
            role="button"
            tabindex="0"
            title="Edit"
          >
            <i
              class="glyphicon glyphicon-zoom-in"
            />
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="af-paging"
  >
    <div
      class="af-paging__limit"
    >
      <div
        class="af-paging__limit"
      >
        <form
          class="af-paging__form"
        >
          <div
            class="af-form__group"
          >
            <div
              class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
            >
              <label
                class="af-form__group-label"
                for="home_paging"
              >
                Display
              </label>
            </div>
            <div
              class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
            >
              <div
                class="af-form__select"
              >
                <div
                  class="af-form__select-container"
                >
                  <select
                    class="af-form__input-select"
                    id="home_paging"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="25"
                    >
                      25
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <span
                    class="glyphicon glyphicon-menu-down"
                  />
                </div>
                <span
                  class="af-form__input-cmplt"
                >
                  elements
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="af-paging__pager"
    >
      <nav
        class="af-pager"
      >
        <ul
          class="af-pager__pagination"
        >
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-nolink"
            >
              « Previous
            </span>
          </li>
          <li
            class="af-pager__item af-pager__item--active"
          >
            <a
              class="af-pager__item-link"
              href="#"
            >
              <span>
                1
              </span>
            </a>
          </li>
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-nolink"
            >
              Next »
            </span>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Check Project ItemsTable behaviour should render correctly in french 1`] = `
<DocumentFragment>
  <table
    class="af-table"
  >
    <thead
      class="af-table-thead"
    >
      <tr
        class="af-table__tr"
      >
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Nom
              </span>
              <i
                class="glyphicon glyphicon-sorting"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Équipe
              </span>
              <i
                class="glyphicon glyphicon-sorting"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Date de création
              </span>
              <i
                class="glyphicon glyphicon-sorting-desc"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Type d'annotation
              </span>
              <i
                class="glyphicon glyphicon-sorting"
              />
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content"
          >
            <button
              class="af-btn af-btn--table-sorting"
            >
              <span
                class="af-btn__text"
              >
                Statut
              </span>
            </button>
          </span>
        </th>
        <th
          class="af-table__th af-table__th--sortable"
          classmodifier="sortable"
        >
          <span
            class="af-table__th-content af-btn__text"
          >
            Action
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      class="af-table__body"
    >
      <tr
        class="af-table__tr"
      >
        <td
          class="af-table__cell"
        >
          Green card
        </td>
        <td
          class="af-table__cell"
        >
          groupName
        </td>
        <td
          class="af-table__cell"
        >
          02/01/0001
        </td>
        <td
          class="af-table__cell"
        >
          Image
        </td>
        <td
          class="af-table__cell"
        >
          <span>
            Chargement...
          </span>
        </td>
        <td
          class="af-table__cell"
        >
          <a
            class="btn af-btn--circle"
            href="#"
            id="id"
            role="button"
            tabindex="0"
            title="Éditer"
          >
            <i
              class="glyphicon glyphicon-zoom-in"
            />
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="af-paging"
  >
    <div
      class="af-paging__limit"
    >
      <div
        class="af-paging__limit"
      >
        <form
          class="af-paging__form"
        >
          <div
            class="af-form__group"
          >
            <div
              class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
            >
              <label
                class="af-form__group-label"
                for="home_paging"
              >
                Afficher
              </label>
            </div>
            <div
              class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
            >
              <div
                class="af-form__select"
              >
                <div
                  class="af-form__select-container"
                >
                  <select
                    class="af-form__input-select"
                    id="home_paging"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="25"
                    >
                      25
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <span
                    class="glyphicon glyphicon-menu-down"
                  />
                </div>
                <span
                  class="af-form__input-cmplt"
                >
                  éléments
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="af-paging__pager"
    >
      <nav
        class="af-pager"
      >
        <ul
          class="af-pager__pagination"
        >
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-nolink"
            >
              « Précédent
            </span>
          </li>
          <li
            class="af-pager__item af-pager__item--active"
          >
            <a
              class="af-pager__item-link"
              href="#"
            >
              <span>
                1
              </span>
            </a>
          </li>
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-nolink"
            >
              Suivant »
            </span>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
